<resources>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="no_news">"No News at the moment."</string>

    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News Settings</string>

    <string name="settings_page_label">News per Page</string>
    <string name="settings_page_key" translatable="false">page</string>
    <string name="settings_page_default" translatable="false">10</string>

    <string name="settings_order_by_label">Order by</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">newest</string>

    <string name="settings_version_label">Version</string>
    <string name="settings_version_value" translatable="false">2.0</string>
    <string name="settings_version_by_default" translatable="false">1.0</string>

    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
    <string name="settings_order_by_newest_label">Newest</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>


    <string name="search_hint">Ex: FIFA</string>
    <string name="app_label">NewsBoard</string>
    <string name="search_title">Search News</string>


    <!--Navigation Menu-->

    <string name="nav_title">Category</string>

    <string name="sec_all">General</string>
    <string name="sec_world">World</string>
    <string name="sec_tech">Technology</string>
    <string name="sec_politics">Politics</string>
    <string name="sec_business">Business</string>
    <string name="sec_society">Society</string>
    <string name="lifestyle">LifeStyle</string>
    <string name="film">Film</string>
    <string name="opinion">Opinion</string>
    <string name="sport">Sports</string>


</resources>
