<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">


    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_page_default"
        android:hint="1-50"
        android:inputType="number"
        android:key="@string/settings_page_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_page_label" />

    <Preference
        android:enabled="true"
        android:selectable="false"
        android:summary="@string/settings_version_value"
        android:title="@string/settings_version_label" />


</PreferenceScreen>