<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_all"
            android:title="@string/sec_all" />

        <item
            android:id="@+id/nav_world"
            android:title="@string/sec_world" />

        <item
            android:id="@+id/nav_tech"
            android:title="@string/sec_tech" />

        <item
            android:id="@+id/nav_politics"
            android:title="@string/sec_politics" />


        <item
            android:id="@+id/nav_business"
            android:title="@string/sec_business" />

        <item
            android:id="@+id/nav_society"
            android:title="@string/sec_society" />

        <item
            android:id="@+id/nav_lifestyle"
            android:title="@string/lifestyle" />

        <item
            android:id="@+id/nav_film"
            android:title="@string/film" />

        <item
            android:id="@+id/nav_opinion"
            android:title="@string/opinion" />

        <item
            android:id="@+id/nav_sport"
            android:title="@string/sport" />

    </group>
</menu>